tests/neg-custom-args/deprecation/t3235-minimal.check
-- Error: tests/neg-custom-args/deprecation/t3235-minimal.scala:3:21 ---------------------------------------------------
3 |    assert(123456789.round == 123456789) // error
  |           ^^^^^^^^^^^^^^^
  |method round in class RichInt is deprecated since 2.11.0: this is an integer type; there is no reason to round it.  Perhaps you meant to call this on a floating-point value?
-- Error: tests/neg-custom-args/deprecation/t3235-minimal.scala:4:16 ---------------------------------------------------
4 |    assert(math.round(123456789) == 123456789) // error
  |           ^^^^^^^^^^
  |method round in package scala.math is deprecated since 2.11.0: This is an integer type; there is no reason to round it. Perhaps you meant to call this with a floating-point value?
-- Error: tests/neg-custom-args/deprecation/t3235-minimal.scala:5:32 ---------------------------------------------------
5 |    assert(1234567890123456789L.round == 1234567890123456789L) // error
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |method round in class RichLong is deprecated since 2.11.0: this is an integer type; there is no reason to round it.  Perhaps you meant to call this on a floating-point value?
-- Error: tests/neg-custom-args/deprecation/t3235-minimal.scala:6:16 ---------------------------------------------------
6 |    assert(math.round(1234567890123456789L) == 1234567890123456789L) // error
  |           ^^^^^^^^^^
  |method round in package scala.math is deprecated since 2.11.0: This is an integer type; there is no reason to round it. Perhaps you meant to call this with a floating-point value?
